Add encrypt file
