# swagger_output.json
@@ -303,6 +303,43 @@
         ]
       }
     },
+    "/api/document/{id}/url": {
+      "get": {
+        "tags": [
+          "Document"
+        ],
+        "description": "Endpoint to get the specific document.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/api/document/{id}": {
       "get": {
         "tags": [
